[package]
name = "server-mieru-rs"
version = "0.1.10"
edition = "2024"

[[bin]]
name = "server-mieru-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
bytes = "1"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
chacha20poly1305 = "0.10"
rand = "0.9"
tracing = "0.1"
thiserror = "2"
tokio-util = "0.7"
async-trait = "0.1"
subtle = "2"
dashmap = "6.1"
moka = { version = "0.12", features = ["future"] }
scopeguard = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
humantime = "2"
tracing-subscriber = { version = "0.3", features = ["time", "local-time"] }
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
panel-core = { git = "https://github.com/xflash-panda/server-panel-rs.git", tag = "v0.1.11" }
panel-connect-rpc = { git = "https://github.com/xflash-panda/server-panel-rs.git", tag = "v0.1.11" }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
acl-engine-rs = { git = "https://github.com/xflash-panda/acl-engine-rs.git", tag = "v0.4.4", features = ["async"] }
socket2 = "0.6"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "session_throughput"
harness = false

[[bench]]
name = "auth_performance"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
